[#4216] User Multi Selector Dialog - Save Event

--- a/api-domain/src/main/resources/descriptors/userselector-api.yaml
+++ b/api-domain/src/main/resources/descriptors/userselector-api.yaml
@@ -31,6 +31,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/UserSelector'
+        isSaving:
+          type: boolean
     UserSelector:
       type: object
       properties:
