--- a/sec/build.gradle
+++ b/sec/build.gradle
@@ -1,5 +1,9 @@
 
 dependencies {
+	api project(':api-domain')
+	api project(':api')
+
+
 	api 'org.springframework.security:spring-security-config:5.3.5.RELEASE'
 	api 'org.springframework.security:spring-security-web:5.3.5.RELEASE'
 	api 'javax.servlet:javax.servlet-api:4.0.1'
