--- a/ui-api/src/main/resources/descriptors/form-api.yaml
+++ b/ui-api/src/main/resources/descriptors/form-api.yaml
@@ -33,10 +33,15 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/WidgetDescriptor"
-
     WidgetInstance:
       description: An instantiated widget on a form refering its descriptor and containing the widget instance data.
       type: object
+      required:
+        - "stringValues"
+        - "intValues"
+        - "doubleValues"
+        - "dateValues"
+        - "binaryDataValues"
       properties:
         descriptorUri:
           description: The reference to the widget descriptor.
@@ -62,6 +67,11 @@ components:
           type: array
           items:
             type: LocalDateTime
+        binaryDataValues:
+          description: Array of the binary data values that the widget contains.
+          type: array
+          items:
+            type: BinaryData
         widgets:
           description: Array of the contained widget instances.
           type: array
@@ -181,11 +191,6 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/PredictiveInputGraphNode"
-        nodes:
-          description: all the nodes held by the graph descriptor. We need these if we want to maintain a mapping of the URIs and the nodes, which we do.
-          type: array
-          items:
-            $ref: "#/components/schemas/PredictiveInputGraphNode"
     PredictiveInputGraphNode:
       description: A single node in the input graph, contains a URI that points to a descriptor. The descriptor can be a simple property but a detail or a reference as well.
       type: object
@@ -212,5 +217,4 @@ components:
         children:
           type: array
           items:
-            type: string
-            format: uri
+            $ref: "#/components/schemas/PredictiveInputGraphNode"
