[#4341] fix ContentStagingApi yaml

--- a/api-domain/src/main/resources/descriptors/contentstaging-api.yaml
+++ b/api-domain/src/main/resources/descriptors/contentstaging-api.yaml
@@ -14,9 +14,8 @@ components:
     ContentStagingDocument:
       type: object
       properties:
-        uri:
-          type: string
-          format: uri
+        direction:
+          $ref: '#/components/schemas/Direction'
         key:
           type: string
           format: uuid
