[#4454] initialize invocation-cli-rest and invocation-srv-rest

--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,8 @@ include 'sec-ms365'
 include 'vaadin-sec'
 include 'storage-fs'
 include 'gson'
+include 'invocation-cli-rest'
+include 'invocation-srv-rest'
 
 def localSettings = file("local.settings.gradle")
 if (localSettings.exists()) {
