--- a/api-domain/build.gradle
+++ b/api-domain/build.gradle
@@ -4,7 +4,6 @@ plugins {
 }
 
 dependencies {
-	api project(':types')
 }
 
 smartbit4all {
@@ -12,7 +11,7 @@ smartbit4all {
   	modelPackagePrefix = "org.smartbit4all.api"
   	modelPackagePostfix = "bean"
   	importMappings = [
-  		"BinaryData": "org.smartbit4all.types.binarydata.BinaryData"
+  		"BinaryData": "org.smartbit4all.api.binarydata.BinaryData"
   	]
   }
 }
