--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,12 @@
+plugins {
+	id 'java-test-fixtures'
+}
+
+
 dependencies {
-    api 'org.springframework:spring-context:5.2.3.RELEASE'
+	api project(':api-domain')
+	
+	api 'org.springframework:spring-context:5.2.3.RELEASE'
     api "io.reactivex.rxjava3:rxjava:3.0.12"
     //implementation 'javax.validation:validation-api:2.0.1.Final'
 }
