[#4417] BinaryContent + move BinaryData - test fix

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -11,4 +11,8 @@ dependencies {
 		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
         exclude group: 'ch.qos.logback', module: 'logback-classic'
 	}
+	
+    testImplementation testFixtures(project(':core'))
+	testFixturesImplementation project(':core')
+    testFixturesImplementation testFixtures(project(':core'))
 }
