--- a/storage-fs/build.gradle
+++ b/storage-fs/build.gradle
@@ -6,4 +6,8 @@ dependencies {
 	api project(':domain')
 
 	testImplementation project(':gson')
+	
+    testImplementation testFixtures(project(':core'))
+	testFixturesApi project(':core')
+    testFixturesApi testFixtures(project(':core'))
 }
