--- a/ui-api/src/main/resources/descriptors/form-api.yaml
+++ b/ui-api/src/main/resources/descriptors/form-api.yaml
@@ -169,6 +169,7 @@ components:
         - integer
         - integer_interval
         - survey_combo
+        - table
       description: >
         * `container` This is just a folder for a set of widgets.
          * `reference` Can be used to manage the reference for another entity. 
@@ -184,6 +185,7 @@ components:
          * `integer` The single property widget with integer type..
          * `integer_interval` An editor with a pair of integer properties.
          * `survey_combo` A widget that contains a score, and optionally a comment and/or a photo.
+         * `table` A widget that contains a table in the form of widgets.
     PredictiveInputGraphDescriptor:
       description: Descriptor of a graph that defines input values of the PredictiveFormInstance. The available choices are calculated by this graph while editing the PredictiveFormInstance.
       type: object
